[package]
name = "http_handlers"
version = "0.1.0"
authors = ["jrieck <jackdrieck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.1", features = ["json"] }
git2 = "0.13"
serde_json = "1.0"
time = "0.2"
