[package]
name = "http_handlers"
version = "0.1.0"
authors = ["jrieck <jackdrieck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
time = "0.2"
jsonwebtoken = "7.1"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
pretty_env_logger = "0.4"
mockito = "0.25"
